RESOLVED FIXED39773
[Qt] Localizations.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39773
Summary [Qt] Localizations.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 13:34:31 PDT
WebCore/platform/qt/Localizations.cpp:31: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebCore/platform/qt/Localizations.cpp:37: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/Localizations.cpp:482: One line control clauses should not use braces. [whitespace/braces] [4] WebCore/platform/qt/Localizations.cpp:486: One line control clauses should not use braces. [whitespace/braces] [4] WebCore/platform/qt/Localizations.cpp:490: One line control clauses should not use braces. [whitespace/braces] [4] WebCore/platform/qt/Localizations.cpp:494: One space before end of line comments [whitespace/comments] [5] Total errors found: 6 in 1 files
Attachments
Patch that fixes the coding style issues (2.25 KB, patch)
2010-05-26 14:44 PDT, Anders Bakken
no flags
Patch (2.31 KB, patch)
2010-06-04 11:00 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 14:44:42 PDT
Created attachment 57154 [details] Patch that fixes the coding style issues
WebKit Review Bot
Comment 2 2010-05-26 14:47:10 PDT
Attachment 57154 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/platform/qt/Localizations.cpp:30: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Bakken
Comment 3 2010-05-26 15:02:51 PDT
Comment on attachment 57154 [details] Patch that fixes the coding style issues The style error relates to this: https://bugs.webkit.org/show_bug.cgi?id=39787
Petri Ojala
Comment 4 2010-05-26 21:50:03 PDT
QtTriaged
David Levin
Comment 5 2010-05-27 11:16:02 PDT
Comment on attachment 57154 [details] Patch that fixes the coding style issues > No new tests. (OOPS!) Ditto.
David Levin
Comment 6 2010-05-27 11:16:39 PDT
(In reply to comment #3) > (From update of attachment 57154 [details]) > The style error relates to this: > > https://bugs.webkit.org/show_bug.cgi?id=39787 Feel free to fix. Should be pretty easy :)
Anders Bakken
Comment 7 2010-06-04 11:00:29 PDT
WebKit Review Bot
Comment 8 2010-06-04 11:04:06 PDT
Attachment 57896 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/platform/qt/Localizations.cpp:30: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 9 2010-06-04 20:52:19 PDT
Comment on attachment 57896 [details] Patch Clearing flags on attachment: 57896 Committed r60730: <http://trac.webkit.org/changeset/60730>
WebKit Commit Bot
Comment 10 2010-06-04 20:52:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.