2010-06-04  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] Localizations.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39773

        * platform/qt/Localizations.cpp:
        (WebCore::localizedMediaTimeDescription):

Canonical link: https://commits.webkit.org/51753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60730 268f45cc-cd09-0410-ab3c-d52691b4dbfc